[package]
name = "validators-app-api"
version = "0.1.0"
authors = ["Konstantin Stepanov <konstantin.s@p2p.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde_derive = "1"
serde = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
uuid = { version = "0.8", optional = true, features = ["serde"] }
solana-sdk = { version = "1.6", optional = true }
semver = { version = "1", optional = true, features = ["serde"] }

[features]
default = ["native_types"]
native_types = ["time", "uuid", "pubkey", "ipaddr", "semver"]
time = ["chrono"]
pubkey = ["solana-sdk"]
ipaddr = []
